--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon --experimental-modules functional-playground/play.mjs",
+    "start:array": "nodemon --experimental-modules functional-playground/arrayPlay.mjs",
     "build": "babel lib --out-dir dist"
   },
   "repository": {
