--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "nodemon --experimental-modules functional-playground/play.mjs",
     "start:array": "nodemon --experimental-modules functional-playground/arrayPlay.mjs",
+    "start:curry": "nodemon --experimental-modules functional-playground/curryPlay.mjs",
     "build": "babel lib --out-dir dist"
   },
   "repository": {
